# DJAPP

./: .gitignore  AGENTS.md  Cargo.toml  MEMORY.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tsconfig.json
docs/architecture/: ADR-001-audio-analysis-and-persistence-dependencies.md  ADR-002-sample-rate-conversion.md  ADR-003-local-persistence-schema.md  ADR-004-application-scaffold.md  ADR-005-local-library-scanning.md  ADR-006-first-deck-ui-integration.md  ADR-007-shared-two-deck-ui-service.md  ADR-008-audio-device-selection-and-recovery.md  ADR-009-headphone-cue-routing-and-capabilities.md  ADR-010-production-dual-device-cue-routing.md  ADR-011-tempo-pitch-sync-and-jog.md  ADR-012-track-analysis-pipeline.md  ADR-013-bpm-accuracy-and-rhythm-dependency-decision.md
docs/testing/: analysis-acceptance.md  analysis-feature-gating.md  analysis-ui-integration.md  application-scaffold.md  audio-device-selection-and-recovery.md  audio-spike.md  beat-grid-analysis.md  bpm-accuracy-milestone.md  bpm-analysis.md  deck-a-ui-integration.md  decoder-spike.md  dual-device-cue-routing.md  dual-output-synchronization-spike.md  headphone-cue-routing.md  local-library-scanning.md  local-persistence.md  musical-key-analysis.md  one-deck-transport.md  production-tempo-pitch.md  sample-rate-conversion.md  shared-two-deck-ui.md  signalsmith-tempo-pitch-spike.md  two-deck-engine.md  waveform-and-loudness-analysis.md
src/: audio.rs  deck.rs  device.rs  dual_output.rs  lib.rs  library.rs  main.rs  media.rs  mixer.rs  persistence.rs  tempo.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mixer_service.rs
src-ui/: App.tsx  styles.css
src/analysis/: cache.rs  fixtures.rs  key.rs  mod.rs  pipeline.rs  rhythm.rs  service.rs  signal.rs  types.rs  waveform.rs
src/media/: decode.rs  resample.rs
tests/fixtures/audio/: README.md  music-like-48k.m4a  tone.aiff  tone.flac  tone.m4a
